2012-11-08  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* gnus-namazu.el (gnus-namazu/make-directory-table): Bind
	file-name-handler-alist to nil, in order to avoid that semicolons
	included in group names trigger tramp related handlers.

2011-12-02  Katsumi Yamaoka  <yamaoka@jpl.org>

	* compface.el (uncompface): Update the header format of icon data for
	the most recent icontopbm program.

2010-09-29  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* smtpmail.el: Removed.

	* ucs-tables.el: Removed.

	* sendmail.el: Removed.

2010-09-26  Julien Danjou  <julien@danjou.info>

	* ssl.el: Removed.

	* xml.el: Removed.

2010-09-26  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gpg.el: Removed -- seems unused.

2009-04-09  Richard M Stallman  <rms@gnu.org>

	* sendmail.el (sendmail-send-it): Replace any
	pre-existing Content-type header if we insert one.

2009-03-15  Glenn Morris  <rgm@gnu.org>

	* sendmail.el (mail-yank-prefix): Doc fix.
	(mail-mode-map): Only enable the "Cite Original" menu-item when
	appropriate.  Standardize the text used for other headers re hyphens.

2009-03-14  Glenn Morris  <rgm@gnu.org>

	* sendmail.el (mail-interactive): Doc fix.
	(mail-yank-ignored-headers): Add X-RMAIL- headers, bump :version.
	(mail-setup): Use the function mail-signature.
	(mail-mode-hook): Doc fix.
	(mail-to, mail-subject, mail-cc, mail-bcc, mail-reply-to)
	(mail-mail-reply-to, mail-mail-followup-to): Doc fixes.
	(mail-signature): Check the signature file is readable.
	With the argument ATPOINT, really insert at point.
	Handle the case when the variable mail-signature is an expression.

2009-03-10  Glenn Morris  <rgm@gnu.org>

	* sendmail.el (mail-archive-file-name, mail-default-headers):
	Doc fixes.
	(mail-mailing-lists): Remove leading `*' from defcustom doc.

2009-03-03  Simon Josefsson  <simon@josefsson.org>

	* smtpmail.el (smtpmail-auth-supported): Mention that list is
	in preference order.
	(smtpmail-try-auth-methods): Improve which authentication