@@ -1,3 +1,14 @@
+2012-12-04  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* gmm-utils.el (gmm-flet, gmm-labels): New macros.
+
+	* gnus-sync.el (gnus-sync-lesync-call)
+	* message.el (message-read-from-minibuffer): Use gmm-flet.
+
+	* gnus-score.el (gnus-score-decode-text-parts): Use gmm-labels.
+
+	* gnus-util.el (gnus-macroexpand-all): Remove.
+
 2012-12-03  Andreas Schwab  <schwab@linux-m68k.org>
 
 	* gnus-sum.el (gnus-summary-mode-map): Bind gnus-summary-widget-forward
