@@ -1,3 +1,7 @@
+2012-12-04  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* gnus-namazu.el (gnus-namazu/update-p): Use gmm-labels.
+
 2012-11-08  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>
 
 	* gnus-namazu.el (gnus-namazu/make-directory-table): Bind
